--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="test_size_eighteen">18sp</dimen>
+
+    <dimen name="one_layout_dp">1dp</dimen>
+    <dimen name="layout_default_height">40dp</dimen>
 </resources>
